[package]
name = "concurrent_qs"
version = "0.3.2"
edition = "2021"

[dependencies]
loom = { version = "0.6", features = ["checkpoint"], optional = true }

[features]
hl-loom = ["loom"]
full-loom = ["hl-loom"]

# this profile is meant for use with the hl-loom feature
[profile.hl-loom]
inherits = "release"
debug-assertions = true
debug = "limited"
lto = "thin"

# this profile is meant for use with the hl-loom feature
[profile.full-loom]
inherits = "release"
debug-assertions = true
debug = "limited"
lto = "thin"