[package]
name = "concurrent_qs"
license = "MIT"
version = "0.4.2"
edition = "2021"

[dependencies]
loom = { version = "0.6", features = ["checkpoint"], optional = true }

[features]
default = []
full = ["spsc-all"]
spsc-bounded = []
spsc-unbounded = []
spsc-all = ["spsc-bounded", "spsc-unbounded"]
hl-loom = ["loom"]
full-loom = ["hl-loom"]

# this profile is meant for use with the hl-loom feature
[profile.hl-loom]
inherits = "release"
debug-assertions = true
debug = "limited"
lto = "thin"

# this profile is meant for use with the full-loom feature
[profile.full-loom]
inherits = "release"
debug-assertions = true
debug = "limited"
lto = "thin"